--- a/.gitmodules
+++ b/.gitmodules
@@ -3,4 +3,4 @@
 	url = https://github.com/google/googletest.git
 [submodule "civetweb"]
 	path = 3rdparty/civetweb
-	url = https://github.com/civetweb/civetweb.git
+	url = https://github.com/nsone/civetweb.git
